--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ VITE_FIREBASE_APP_ID=your_app_id
 # API
 VITE_API_BASE_URL=http://localhost:3000/api
 VITE_CUSTOMERS_PAGE_SIZE=20
+VITE_PROJECTS_PAGE_SIZE=20
