--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ VITE_FIREBASE_APP_ID=your_app_id
 VITE_API_BASE_URL=http://localhost:3000/api
 VITE_CUSTOMERS_PAGE_SIZE=20
 VITE_PROJECTS_PAGE_SIZE=20
+VITE_UNITS_PAGE_SIZE=20
