--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.6",
     "react": "^19.2.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
     "react-phone-number-input": "^3.4.14",
